# frost-weather-extractor

./: .gitignore  .pre-commit-config.yaml  README.rst  config.yaml  pyproject.toml
docker-env/: Dockerfile  extractor-crontab  extractor.sh
julia_frost_ts/: __main__.py  config.py  extractor.py  utils.py
